# CRenderer

./: CMakeLists.txt  README.md  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h
core/: CMakeLists.txt  geometry.cpp  geometry.h  model.cpp  model.h  our_gl.cpp  our_gl.h  render.h  sample.cpp  sample.h  shaders.cpp  shaders.h  tgaimage.cpp
platform/: CMakeLists.txt  win32.cpp  win32.h
